# bodogenomikata2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  check_frontend.py  pyproject.toml  take_screenshot.py
.agents/skills/backend/: SKILL.md
.agents/skills/bodogenomikata2-patterns/: SKILL.md
.agents/skills/ecc-search-first/: SKILL.md
.agents/skills/ecc-zero-fat/: SKILL.md
.agents/skills/notebooklm/: SKILL.md
.serena/: project.yml
.serena/memories/: MEMORY.md  development_workflow_v2.md  edge_native_architecture.md  game_detail_visualization_proposal.md  v2_implementation_status.md  v2_vision_and_architecture.md
.serena/memories/code-reuse-analysis/: infographics-scripts.md
backend/: main_server.py  verify_total_pipeline.py
backend/app/: main.py  models.py  routers.py  utils.py
backend/tests/: conftest.py  test_category3_sync.py  test_category_1.py  test_category_2_search.py  test_category_5.py  test_community_playwright.py  test_playwright_e2e.py  test_ranking.py
docs/: AUTOMATION_STRATEGY.md  GAME_PAGE_STRUCTURE.md  MASTER_GUIDE.md  NOTEBOOKLM_V2.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: notebooklm_auto.py  notebooklm_constants.py  notebooklm_utils.py
static/: data.json  index.html
static/assets/: index-7YES59kR.js  index-BD9X8t8h.js  index-BZS7Nt19.js  index-C0ttFg4s.js  index-CBB_I1Oh.js  index-DBShtP80.js  index-Deu7g3MS.js  index-Dw7ayJM1.css  index-DyY93QrD.js  index-aSp1cIvV.js  index-fowTRvbI.js  index-o8emSC5c.js  index-wwESfJ6r.css
(+30 files in other folders)
