[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "rule-scribe-games"
version = "0.1.0"
description = "Board Game Metadata Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "python-dotenv",
    "anyio",
    "PyYAML",
    "aiohttp",
    "pdfplumber",
    "notebooklm-py>=0.3.4",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pillow",
    "pypdf2",
    "pdf2image",
    "beautifulsoup4",
    "playwright",
    "pytest-playwright",
]


[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "RUF", "SIM", "TID", "ARG", "PTH", "RET", "C4"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "ARG001", "ARG002", "ANN201", "D100", "D101", "D102", "D103"]
"scripts/*" = ["T201"]
